2008-05-27 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Added exporting of angle attribute for label styles.

2008-05-26 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java,
      src/com/vividsolutions/jump/util/Range.java:
      Added generics to RangeTreeMap.

2008-05-26 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/util/SLDImporter.java:
      Fixed import of external graphics.

2008-05-21 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/OpenJumpConfiguration.java,
      src/org/openjump/core/ui/plugin/style/ImportArcMapStylePlugIn.java:
      Added ArcMap2SLD-style importer plugin (untested because of a definitive lack of ArcMap...).

2008-05-20 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Fixed import of uDig SLD files.

2008-05-20 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Fixed order of Min/MaxScaleDenominator.

2008-05-19 mentaer <sstein@geo.unizh.ch>
      Did some major changes for Intersect Polygon Layers PlugIn, to avoid
      malformed output polygons. The new version utilizes the Polygonizer
      and attributes are transferred automatically (i.e. no option anymore)
      changed
      org.openjump.core.geomutils.algorithm.IntersectGeometries
      org.openjump.core.ui.plugin.tools.IntersectPolygonLayersPlugIn
      added
      org.openjump.core.geomutils.algorithm.GeometryConverter
      
2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java:
      Removed the long/int hack, since it was caused by the deeJUMP shape
      file reader and is fixed now.

2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>