@@ -1,4 +1,3 @@
-
 /*
  * The Unified Mapping Platform (JUMP) is an extensible, interactive GUI
  * for visualizing and manipulating spatial features with geometry and attributes.
@@ -36,84 +35,150 @@ package com.vividsolutions.jump.workbench.model;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+
+import javax.xml.namespace.QName;
 
 /**
  * Whatever the user needs to do a particular task. Currently a thin wrapper
  * around a LayerManager.
  */
-//I wonder if this class should be named "Project" instead. [Jon Aquino]
+// I wonder if this class should be named "Project" instead. [Jon Aquino]
 public class Task implements LayerManagerProxy {
-    private String name = "";
-    private ArrayList nameListeners = new ArrayList();
-    private File projectFile = null;
+  private String name = "";
 
-    //No parameters so it can be created by Java2XML.
-    public Task() {
-        layerManager = new LayerManager();
+  private LayerManager layerManager;
+
+  private List<NameListener> nameListeners = new ArrayList<NameListener>();
+
+  private File projectFile = null;
+
+  /** The map of task properties. */
+  private Map<QName, Object> properties = new HashMap<QName, Object>();
+
+  // No parameters so it can be created by Java2XML.
+  public Task() {
+    this.layerManager = new LayerManager(this);
+  }
+
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+    fireNameChanged(name);
+  }
+
+  public void add(NameListener nameListener) {
+    nameListeners.add(nameListener);
+  }
+
+  private void fireNameChanged(String name) {
+    for (NameListener nameListener : nameListeners) {
+      nameListener.taskNameChanged(name);
     }
+  }
 
-    private LayerManager layerManager;
+  public File getProjectFile() {
+    return projectFile;
+  }
 
-    public void add(NameListener nameListener) {
-        nameListeners.add(nameListener);
+  public void setProjectFile(File projectFile) {
+    this.projectFile = projectFile;
+  }
+
+  public LayerManager getLayerManager() {
+    return layerManager;
+  }
+
+  @SuppressWarnings("unchecked")
+  public Collection<Category> getCategories() {
+    return getLayerManager().getCategories();
+  }
+
+  /**
+   * Called by Java2XML
+   */
+  @SuppressWarnings("unchecked")
+  public void addCategory(Category category) {
+    getLayerManager().addCategory(category.getName());
+
+    Category actual = getLayerManager().getCategory(category.getName());
+
+    for (Layerable layerable : (Collection<Layerable>)category.getLayerables()) {
+      actual.addPersistentLayerable(layerable);
     }
+  }
 
-    public void setName(String name) {
-        this.name = name;
-        fireNameChanged(name);
-    }
+  /**
+   * Set the value for the named property.
+   * 
+   * @param name The name of the property.
+   * @param value The value for the property.
+   */
+  public void setProperty(QName name, Object value) {
+    properties.put(name, value);
+  }
 
-    public void setProjectFile(File projectFile) {
-        this.projectFile = projectFile;
-    }
+  /**
+   * <p>
+   * Get the value for the named property casting it to the return value.
+   * </p>
+   * <p>
+   * Instead of:
+   * </p>
+   * 
+   * <pre>
+   * Integer i = (Integer)task.getProperty(...)
+   * </pre>
+   * 
+   * <p>
+   * You can use the following:
+   * </p>
+   * 
+   * <pre>
+   * Integer i = task.getProperty(...)
+   * </pre>
+   * 
+   * @param name The name of the property.
+   * @return value The value for the property.
+   */
+  @SuppressWarnings("unchecked")
+  public <T> T getProperty(QName name) {
+    return (T)properties.get(name);
+  }
 
-    public LayerManager getLayerManager() {
-        return layerManager;
-    }
+  /**
+   * Get all the task properties.
+   * 
+   * @return The task properties.
+   */
+  public Map<QName, Object> getProperties() {
+    return properties;
+  }
 
-    public File getProjectFile() {
-        return projectFile;
-    }
+  /**
+   * Set all the task properties.
+   * 
+   * @param properties The task properties.
+   */
+  public void setProperties(Map<QName, Object> properties) {
+    this.properties.putAll(properties);
+  }
 
-    public String toString() {
-        return getName();
-    }
+  public String toString() {
+    return getName();
+  }
 
-    public String getName() {
-        return name;
-    }
-
-    private void fireNameChanged(String name) {
-        for (Iterator i = nameListeners.iterator(); i.hasNext();) {
-            NameListener nameListener = (NameListener) i.next();
-            nameListener.taskNameChanged(name);
-        }
-    }
-
-    public Collection getCategories() {
-        return getLayerManager().getCategories();
-    }
-
-    /**
-     * Called by Java2XML
-     */
-    public void addCategory(Category category) {
-        getLayerManager().addCategory(category.getName());
-
-        Category actual = getLayerManager().getCategory(category.getName());
-
-        for (Iterator i = category.getLayerables().iterator(); i.hasNext();) {
-            Layerable layerable = (Layerable) i.next();
-            actual.addPersistentLayerable(layerable);
-        }
-    }
-
-    /**
-     * Interface: NameListener must respond to task name changing.
-     */
-    public static interface NameListener {
-        public void taskNameChanged(String name);
-    }
+  /**
+   * Interface: NameListener must respond to task name changing.
+   */
+  public static interface NameListener {
+    public void taskNameChanged(String name);
+  }
 
 }
