@@ -1,0 +1,7 @@
+package org.openjump.core.model;
+
+import javax.xml.namespace.QName;
+
+public interface OpenJumpTaskProperties {
+   QName SRID = QName.valueOf("{http://openjump.org/task}srid");
+}
