@@ -1,3 +1,9 @@
+2008-05-27 Paul Austin <paul.austin@revolsys.com>
+      Added properties to tasks
+      Added link from LayerManager to task
+      Added getTask (via LayerManager) to AbstractLayerable and Category
+      Added saving/loading QName values in the Xml2Java code
+      
 2008-05-27 Andreas Schmitz <schmitz@lat-lon.de>
       src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
       Added exporting of angle attribute for label styles.
